gungraun/tests/ui/lib_bench/test_main_invalid_library_benchmark_setup_deprecated.stderr
error: You are using an invalid or deprecated syntax of the main! macro to set up benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) and docs (https://docs.rs/gungraun/latest/gungraun/) for further details.
 --> tests/ui/lib_bench/test_main_invalid_library_benchmark_setup_deprecated.rs:4:5
  |
4 |     main!(some_func);
  |     ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)

error: You are using an invalid or deprecated syntax of the main! macro to set up benchmarks. See the documentation of this macro, the README (https://github.com/gungraun/gungraun) and docs (https://docs.rs/gungraun/latest/gungraun/) for further details.
  --> tests/ui/lib_bench/test_main_invalid_library_benchmark_setup_deprecated.rs:10:5
   |
10 | /     main!(
11 | |         callgrind_args = "some";
12 | |         functions = some_func
13 | |     );
   | |_____^
   |
   = note: this error originates in the macro `main` (in Nightly builds, run with -Z macro-backtrace for more info)
